--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "uglify-js": "^2.6.2"
   },
   "peerDependencies": {
-    "mapbox-gl": ">0.13.0"
+    "mapbox-gl": ">=0.13.0"
   },
   "dependencies": {
   }
